Inited the start positions

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,10 @@
             <version>1.0.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.janusproject.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
     </dependencies>
 </project>
